openmediavault-mergerfs (6.0) stable; urgency=low

  * Update for OMV 6.x

 -- OpenMediaVault Plugin Developers <plugins@omv-extras.org>  Wed, 23 Jun 2021 13:14:07 -0500